@@ -1,5 +1,9 @@
 2009-04-16   Patrice Dumas  <dumas@centre-cired.fr>
 
+	* texi2html.pl: really pass the original @-command for @def*.
+
+2009-04-16   Patrice Dumas  <dumas@centre-cired.fr>
+
 	* texi2html.pl: normalize the inter-spaces in definition arguments.
 
 2009-04-14   Patrice Dumas  <dumas@centre-cired.fr>
